feat: Release Version 2.0.0 - Major feature update with enhanced automation capabilities
  BREAKING CHANGES: None - Fully backward compatible with v1.x
  configurations

  ✨ NEW FEATURES:

  System Control:
  - Added pause/resume functionality to temporarily halt operations without
  losing state
  - System maintains countdown timers and queue during pause
  - New system_pause and system_resume actions with visual feedback

  Selection Modes:
  - Implemented sequential mode as alternative to random selection
  - Toggle between sequential and random modes for both camera and overlay
  - Sequential mode cycles through buttons in configured order
  - Mode persists across start/stop cycles

  Button Management:
  - Added button blacklisting system for temporary exclusion
  - Dynamically exclude problematic buttons without reconfiguration
  - Clear blacklist actions for both camera and overlay switchers
  - Blacklist automatically clears when no valid buttons remain

  Performance Monitoring:
  - Real-time HTTP success rate tracking with percentage display
  - HTTP error counting and monitoring
  - Button press queue system to prevent system overload
  - Queue size monitoring with overflow warnings
  - Average response time calculations

  Statistics & Analytics:
  - Session management with start/stop cycle counting
  - Total runtime tracking across multiple sessions
  - Average interval calculations between triggers
  - History tracking for last N button presses
  - Auto-save statistics at configurable intervals
  - Manual statistics save and clear actions

  MIDI Enhancements:
  - Extended MIDI CC mappings (CC48/49) for pause/resume
  - Additional MIDI notes (48-51) for new features
  - Mode toggle support via MIDI (notes 50/51)

  🎨 USER INTERFACE:

  Presets (38 total):
  - Added 20+ new presets for Ver 2.0 features
  - System Pause/Resume buttons with state indicators
  - Mode toggle presets for camera and overlay
  - Performance monitoring preset category
  - HTTP 

--- a/companion/manifest.json
+++ b/companion/manifest.json
@@ -2,8 +2,8 @@
 	"id": "generic-showswitcher",
 	"name": "Show Switcher",
 	"shortname": "ShowSwitch",
-	"description": "Automatic camera and overlay switching system with random timing control",
-	"version": "1.0.0",
+	"description": "Professional broadcast automation with pause/resume, sequential/random modes, button blacklisting, performance monitoring, and comprehensive MIDI control",
+	"version": "2.0.0",
 	"license": "MIT",
 	"repository": "https://github.com/bitfocus/companion-module-generic-showswitcher.git",
 	"bugs": "https://github.com/bitfocus/companion-module-generic-showswitcher/issues",
