--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,1 +1,1 @@
-{"name":"Show Switcher","version":"2.0.4","license":"MIT","type":"commonjs","dependencies":{}}
+{"name":"generic-showswitcher","version":"2.0.5","license":"MIT","type":"commonjs","dependencies":{"jzz":"^1.8.0"}}
