--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,1 +1,1 @@
-{"name":"generic-showswitcher","version":"2.0.5","license":"MIT","type":"commonjs","dependencies":{"jzz":"^1.8.0"}}
+{"name":"ShowSwitcher","version":"2.0.5","license":"MIT","type":"commonjs","dependencies":{"jzz":"1.9.3","jazz-midi":"1.7.9"}}
